Despliegue Wordpress/wordpress-poc_bd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-poc
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-poc-mysql-service
  namespace: wordpress-poc
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-poc-bd
  namespace: wordpress-poc  
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      tier: mysql
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql        
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 3306
          volumeMounts:             
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage                  
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: bd-data-pvc
