Despliegue Wordpress/wordpress-poc_wp.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-poc-wp-service
  namespace: wordpress-poc
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
  #type: LoadBalancer  para acceso externo sin usar Traefik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress-poc 
spec:
  selector:
    matchLabels:      
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress        
        tier: frontend
    spec:
      imagePullSecrets:
        - name: registry-nexusimgrepo
      containers:
      - image: nexusimgrepo.uca.es/uca-wordpress/uca_wordpress:0.1 #wordpress:6.5-apache
        imagePullPolicy: Always
        securityContext:
#            runAsUser: 999
          allowPrivilegeEscalation: true
        name: wordpress
        ports:
          - containerPort: 80
            name: wordpress
        volumeMounts:
          - name: wordpress-persistent-storage
            mountPath: /var/www/html/wp-content/uploads
          - name: wordpress-opt-scripts-vol
            mountPath: /opt/scripts        
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wp-pv-claim
        - name: wordpress-opt-scripts-vol
          configMap:
            name: wordpress-opt-scripts
